<resources>
  <string name="app_name">Tweeter</string>
  <string name="action_settings">Settings</string>

  <!--Navigation Menu-->
  <string name="profile">Profile</string>
  <string name="lists">Lists</string>
  <string name="bookmarks">Bookmarks</string>
  <string name="moments">Moments</string>
  <string name="settings">Settings and Privacy</string>
  <string name="help">Help Center</string>

  <!--Navigation Header -->
  <string name="followers_count"><b>%d</b> Followers</string>
  <string name="following_count"><b>%d</b> Following</string>

  <!--Navigation Items -->
  <string name="profile_Edit">Edit Profile</string>
  <string name="drawer_close">Close</string>
  <string name="drawer_open">Open</string>
  <string name="menu_search">Search</string>

  <!--Tool Bar Titles-->
  <string name="home">Home</string>
  <string name="notifications">Notifications</string>
  <string name="messages">Messages</string>

  <!--Error Messages-->
  <string name="login_fail">Failed to Authenticate</string>
  <string name="hometimeline_fail">Failed to fetch HomeTimeline</string>
  <string name="usertimeline_fail">Failed to fetch UserTimeline</string>

  <!--Miscellaneous-->
  <string name="compose_hint">What\'s happening?</string>
  <string name="img_entity_description">Timeline</string>

  <!--Profile Activity-->
  <string name="following">Following</string>
  <string name="followers">Followers</string>
  <string name="tweets">Tweets</string>
  <string name="tweetsnreplies">Tweets &amp; replies</string>
  <string name="media">Media</string>
  <string name="likes">Likes</string>

  <!--Trends Activity -->
  <string name="global">Worldwide Trends</string>
  <string name="local">Trends for you</string>

  <!--To be Implemented -->
  <string name="noti_tab">Notifications to be displayed here</string>
  <string name="msg_tab">Messages to be displayed here</string>
</resources>
