<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:id="@+id/separator"/>
  <group android:id="@+id/group_items">
    <item
      android:id="@+id/profile"
      android:icon="@drawable/ic_vector_person_stroke"
      android:title="@string/profile"/>
    <item
      android:id="@+id/lists"
      android:icon="@drawable/ic_vector_lists_stroke"
      android:title="@string/lists"/>
    <item
      android:id="@+id/bookmarks"
      android:icon="@drawable/ic_vector_bookmark_stroke"
      android:title="@string/bookmarks"/>
    <item
      android:id="@+id/moments"
      android:icon="@drawable/ic_vector_compose_moments"
      android:title="@string/moments"/>
  </group>
  <group android:id="@+id/group_help">
    <item
      android:id="@+id/settings"
      android:title="@string/settings"/>
    <item
      android:id="@+id/helpcenter"
      android:title="@string/help"/>
  </group>
  <group android:id="@+id/group_mode">
    <item
      android:id="@+id/mode"
      android:icon="@drawable/ic_vector_moon_stroke"
      android:title="@null"/>
    <item
      android:id="@+id/bar"
      android:icon="@drawable/ic_vector_qr_code"
      android:title="@null"/>
  </group>
</menu>